@@ -190,6 +190,8 @@ Trunk (unreleased changes)
 
       BOOKKEEPER-491: Hedwig doc for configuration (fpj, sijie via fpj)
 
+      BOOKKEEPER-495: Revise BK config doc (fpj, ivank via fpj)
+
       bookkeeper-server:
 
         BOOKKEEPER-328: Bookie DeathWatcher is missing thread name (Rakesh via sijie)
